when creating your own List-View control in a window, or attaching a 
List-View control from a dialog.

* Added CTreeView class.
This class wraps the various messages and macros used by the Win32/64 API
to manage the Tree-View common control. You can inherit from this class
when creating your own Tree-View control in a window, or attaching a 
Tree-View control from a dialog.


Notes for users of previous versions:
-------------------------------------
* There are no cpp files as part of Win32++ now, so these files need to be
  removed from your existing project when upgrading.
  
* CRebar, CStatusbar, and CToolbar have been moved to their own header files,
  but this does not require a change to existing user code.
 


Version 6.02a
=============
Corrects a problem compiling Win32++ with Dev-C++ (or MinGW).

Version 6.02
============

New Features
------------
* Added support for x64 applications.

Win32++ can now be used to build 64 bit applications. The manifest file has 
been modified to support both 32bit and 64bit applications. The new manifest
should be used for any 64 bit applications that use common controls.

Users are encouraged to use the modern Win64 API functions like:
GetWindowLongPtr, SetWindowLongPtr, GetClassLongPtr and SetClassLongPtr.
Win32++ will convert these back to their Win32 API counterparts if required.


Version 6.01
============
Added    CFrame::SetMenuIcons
Added    CFrame::SetToolbarImages
Removed  CToolbar::SetToolbarImageList
Added    CToolbar::SetBitmap
Moved    CreateDisabledImageList to CFrame::CreateDisabledImageList
Modified CFrame::AddMenuIcons

New Features:
------------
* 32 bit bitmaps are now supported for toolbars (requires XP or Vista)
* SetMenuIcons and AddMenuIcons now also accept a bitmap for disabled icons
   in addition to the bitmap for normal icons.


Bug Fixes: 
* The normal and hot toolbar buttons are now displayed correctly.
* Corrected some VC6 compatiblity problems.