@@ -23,6 +23,10 @@ to manage the Tree-View common control. You can inherit from this class
 when creating your own Tree-View control in a window, or attaching a 
 Tree-View control from a dialog.
 
+* Added CPoint struct
+* Added CRect struct
+* Added CSize struct
+
 
 Notes for users of previous versions:
 -------------------------------------
